--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -12,6 +12,17 @@ $darkText: rgba(25, 25, 25, 1);
 $correctGreen: rgba(50, 225, 50, 1);
 $falseRed: rgba(255, 50, 0, 1);
 $cardShadow:3px 4px 5px -1px rgba(0,0,0,0.5);
+
+
+$slider-color-1: blue;
+$slider-color-2: red;
+:root {
+  --thumb-width: 20px;
+}
+
+
+
+
 /* Global Styles */
 * {
   padding: 0;
@@ -305,7 +316,7 @@ body {
 }
 
 .menu-container{
-  display: grid; 
+  display: none; 
   grid-template-columns:1fr 1fr 1fr; 
   grid-template-rows:  1fr  1fr  1.5fr ; 
   gap: 18px 0px; 
@@ -948,3 +959,497 @@ background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204
     width: 0;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+$body-color:rgba(210,210,220,1);
+$main-color:rgba(240,240,240,1);
+$button-color:rgba(240,240,240,1);
+
+.operator-menu-container,.difficulty-menu-container{
+  display:none;
+}
+
+.activity-menu-container,.middle, .top,.bottom{
+  display:flex;
+}
+.activity-menu-container, .operator-menu-container,.difficulty-menu-container{
+  background:$main-color;
+  max-width:323px;
+  width:400px;
+  height:720px;
+  max-height:90vh;
+  flex-direction:column;
+  align-items:center;
+  justify-content:space-evenly;
+  border-radius:25px;
+/*   box-shadow: 0px 5px 28px -5px rgba(0,0,0,0.25),0px 2px 9px 1px rgba(0,0,0,0.25); */
+  box-shadow: 0 2px 8px 1px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+.top, .middle, .bottom{
+  // background:white;
+  max-width:100%;
+  width:100%;
+ 
+  
+}
+.top{
+  height:25%;
+  width:80%;
+}
+.middle{
+/*   flex-wrap:wrap; */
+  position:relative;
+/*   flex-direction:row; */
+  // background:white;
+  height:50%;
+  align-items:center;
+  justify-content:center;
+}
+
+.inner{
+  margin:10px;
+  width:calc(50% - 50px);
+  background:white;
+  display:flex;
+  align-items:center;
+  justify-content:space-around;
+  background-color:$main-color;
+}
+.icon-container{
+/*    box-shadow: 0px 2px 10px -8px rgba(0,0,0,0.25),0px 1px 5px 1px rgba(0,0,0,0.3); */
+  background-color:$button-color;
+   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.6s cubic-bezier(.25,.8,.25,1);
+    border:2px solid rgba(100,100,100,0);
+  border-radius:100%;
+  width:100px;
+  height:100px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  padding:10px;
+  &:hover{
+    cursor:pointer;
+  transition: all 0.6s cubic-bezier(.25,.8,.25,1);
+  
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    transform:scale(1.0);
+    // border-radius:5px;
+  }
+  //   &:active{
+  
+  //   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  //   transform:scale(1.0);
+  //   border-radius:5px;
+  // }
+  
+}
+.quiz{
+   &:hover{
+     
+     background-color:green;
+
+     // border:2px solid rgba(100,125,100,1);
+     & > * {
+       color:rgba(240,240,240,1);
+      
+     };
+  }
+  &.activity-selected{
+     
+    background-color:green;
+    border-radius:5px;
+    // border:2px solid rgba(100,125,100,1);
+    & > * {
+      color:rgba(240,240,240,1);
+     
+    };
+ }
+}
+.mc{
+   &:hover{
+     
+     background-color:blue;
+   
+     // border:2px solid rgba(100,125,100,1);
+     & > * {
+       color:rgba(240,240,240,1);
+    
+     };
+  }
+  &.activity-selected{
+     
+    background-color:blue;
+     border-radius:5px;
+    // border:2px solid rgba(100,125,100,1);
+    & > * {
+      color:rgba(240,240,240,1);
+      
+    };
+ }
+}
+.flash{
+   &:hover{
+     
+     background-color:orange;
+
+     // border:2px solid rgba(100,125,100,1);
+     & > * {
+       color:rgba(240,240,240,1);
+
+     };
+  }
+  &.activity-selected{
+     
+    background-color:orange;
+    border-radius:5px;
+    // border:2px solid rgba(100,125,100,1);
+    & > * {
+      color:rgba(240,240,240,1);
+     
+    };
+ }
+}
+.game{
+   &:hover{
+     
+     background-color:purple;
+     
+     // border:2px solid rgba(100,125,100,1);
+     & > * {
+       color:rgba(240,240,240,1)
+     };
+  }
+  &.activity-selected{
+     
+    background-color:purple;
+    border-radius:5px;
+    // border:2px solid rgba(100,125,100,1);
+    & > * {
+      color:rgba(240,240,240,1);
+      
+    };
+ }
+}
+.middle-inner{
+  display:flex;
+  flex-direction:row;
+  flex-wrap:wrap;
+  height:75%;
+  align-items:center;
+  justify-content:center;
+  
+}
+.bottom{
+  display:flex;
+  align-items:top;
+  justify-content:space-evenly;
+    height:20%;
+  width:80%;
+}
+.nav-button{
+  background-color:$button-color;
+  width:100px;
+  height:50px;
+    transition: all 0.25s cubic-bezier(.25,.8,.25,1);
+  border-radius:25px;
+  font-family:"Patua One";
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  padding:5px;
+  // background-color:rgba(245,245,245,1);
+  font-size:1.25em;
+  &:hover{
+    transform:scale(1.00);
+      background-color:rgba(245,245,25,1);
+    cursor:pointer;
+    border:2px solid black;
+  border-radius:5px;
+    
+  }
+//   & .back-arrow{
+//     color:grey;
+    
+//   }
+}
+.top{
+  display:flex;
+  align-items:end;
+  justify-content:center;
+}
+.header{
+ 
+  font-family:"Patua One";
+  font-size:2em;
+  text-align:center;
+  
+}
+
+.icon{
+  font-size:3em;
+}
+.pen-icon{
+  color:green;
+}
+.flash-icon{
+  color:orange;
+}
+.mc-icon{
+  color:blue;
+}
+.game-icon{
+  color:purple;
+}
+.icon-container{
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.add{
+  &:hover{
+    
+    background-color:green;
+    
+    // border:2px solid rgba(100,125,100,1);
+    & > * {
+      color:rgba(240,240,240,1)
+    };
+ }
+ &.active-operator{
+  background-color:green;
+  border-radius:5px;
+  // border:2px solid rgba(100,125,100,1);
+  & > * {
+    color:rgba(240,240,240,1)
+  };
+ }
+}
+.minus{
+  &:hover{
+    
+    background-color:blue;
+    
+    // border:2px solid rgba(100,125,100,1);
+    & > * {
+      color:rgba(240,240,240,1)
+    };
+ }
+ &.active-operator{
+    
+  background-color:blue;
+  border-radius:5px;
+  // border:2px solid rgba(100,125,100,1);
+  & > * {
+    color:rgba(240,240,240,1)
+  };
+}
+}
+.mult{
+  &:hover{
+    
+    background-color:orange;
+    
+    // border:2px solid rgba(100,125,100,1);
+    & > * {
+      color:rgba(240,240,240,1)
+    };
+  }
+  &.active-operator{
+  
+    background-color:orange;
+    border-radius:5px;
+    // border:2px solid rgba(100,125,100,1);
+    & > * {
+      color:rgba(240,240,240,1)
+    };
+ }
+}
+.div{
+  &:hover{
+    
+    background-color:purple;
+    
+    // border:2px solid rgba(100,125,100,1);
+    & > * {
+      color:rgba(240,240,240,1)
+    };
+  }
+    &.active-operator{
+    
+      background-color:purple;
+      border-radius:5px;
+      // border:2px solid rgba(100,125,100,1);
+      & > * {
+        color:rgba(240,240,240,1);
+        
+      };
+ }
+}
+.plus-icon{
+  color:green;
+}
+.minus-icon{
+  color:blue;
+}
+.times-icon{
+  color:Orange;
+}
+.divide-icon{
+  color:purple;
+}
+.operator-choice > *{
+  pointer-events:none;
+}
+.activities-choice >*{
+  pointer-events:none;
+}
+
+
+.difficulty{
+  flex-direction:column;
+}
+
+#range-input {
+  --thumb-color:green;
+  -webkit-appearance: none;
+  width: 120px;
+  height: 5px;
+  margin: 20px;
+  padding: 0;
+  background-color: lightgray;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  position: relative;
+}
+
+#range-input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background-color: var(--thumb-color);
+  border: 1px solid black;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+}
+
+#range-input::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+}
+
+#range-input::-moz-range-track {
+  background-color: lightgray;
+  height: 5px;
+  border-radius: 5px;
+  border: none;
+}
+
+#range-input::-ms-track {
+  background-color: transparent;
+  border-color: transparent;
+  color: transparent;
+  height: 5px;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+  border-radius: 5px;
+  border: none;
+}
+
+#range-input::-ms-fill-lower {
+  background-color: lightgray;
+  border-radius: 5px;
+}
+
+#range-input::-ms-fill-upper {
+  background-color: lightgray;
+  border-radius: 5px;
+}
+
+#range-input:focus::-webkit-slider-thumb {
+  box-shadow: 0 0 0 5px rgba(63, 81, 181, 0.2);
+}
+
+#range-input:focus::-moz-range-thumb {
+  box-shadow: 0 0 0 5px rgba(63, 81, 181, 0.2);
+}
+
+#range-input:focus::-ms-thumb {
+  box-shadow: 0 0 0 5px rgba(63, 81, 181, 0.2);
+}
+
