--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -473,6 +473,7 @@ background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204
 
 .answer-submit
 {
+  margin-left:20px;
   cursor:pointer;
   display: block;
   padding: 1em;
@@ -1003,14 +1004,14 @@ $button-color:rgba(240,240,240,1);
 }
 .display-container{
   background:$main-color;
-  // max-width:95vw;
+  max-width:95vw;
   width:100vw;
   height:100vh;
-  // max-height:97vh;
+  max-height:95vh;
   flex-direction:column;
   align-items:center;
   justify-content:space-evenly;
-  // border-radius:25px;
+  border-radius:20px;
 /*   box-shadow: 0px 5px 28px -5px rgba(0,0,0,0.25),0px 2px 9px 1px rgba(0,0,0,0.25); */
   box-shadow: 0 2px 8px 1px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
