--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Inconsolata&family=Modak&family=Pacifico&family=Patua+One&family=Roboto&display=swap');
 
+
+
+
 /* SCSS HEX */
 $kelly-green: rgba(41, 191, 18, 1);
 $green-yellow: rgba(171, 255, 79, 1);
@@ -42,6 +45,21 @@ $cardShadow:3px 4px 5px -1px rgba(0,0,0,0.5);
   font-family: "Roboto", sans-serif;
   color: black;
   // color:rgba(255,220,220,1);
+}
+
+
+.brand-title{
+  display:flex;
+  font-family:Bungee Shade;
+  font-size:36px;
+  width:330px;
+  text-align:center;
+
+  position:absolute;
+  top:4vw;
+  left:7vw;
+  z-index:20;
+  color:black;
 }
 /* Game Container Styles */
 .main-container {
