--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -28,8 +28,16 @@ $correctGreen: rgba(50, 225, 50, 1);
 $falseRed: rgba(255, 50, 0, 1);
 $cardShadow:3px 4px 5px -1px rgba(0,0,0,0.5);
 
+$mobileHeaderTextSize: 26px;
+$mobileIconTextSize: 18px;
 
+$TabletHeaderTextSize: 30px;
+$TabletIconTextSize: 20px;
 
+$DesktopHeaderTextSize: 30px;
+$DesktopIconTextSize: 20px;
+
+$numbersFont:"Roboto";
 :root {
   --thumb-width: 20px;
 }
@@ -43,21 +51,26 @@ $cardShadow:3px 4px 5px -1px rgba(0,0,0,0.5);
   margin: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
-  color: black;
+  // color: black;
+  user-select:none;
+
   // color:rgba(255,220,220,1);
 }
 
-
+html {
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+}
 .brand-title{
   display:flex;
   font-family:Bungee Shade;
-  font-size:36px;
+  font-size:22px;
   width:330px;
   text-align:center;
 
   position:absolute;
-  top:4vw;
-  left:7vw;
+  top:0vw;
+  left:5vw;
   z-index:20;
   color:black;
 }
@@ -81,7 +94,7 @@ $cardShadow:3px 4px 5px -1px rgba(0,0,0,0.5);
   
 }
 .top{
-  height:25%;
+  // height:25%;
   width:90%;
 }
 .middle{
@@ -89,7 +102,7 @@ $cardShadow:3px 4px 5px -1px rgba(0,0,0,0.5);
   position:relative;
 /*   flex-direction:row; */
   // background:white;
-  height:50%;
+  // height:50%;
   align-items:center;
   justify-content:center;
 }
@@ -97,6 +110,7 @@ $cardShadow:3px 4px 5px -1px rgba(0,0,0,0.5);
 
 .flash-box {
   cursor: pointer;
+  font-family:$numbersFont;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Old versions of Firefox */
@@ -109,7 +123,7 @@ $cardShadow:3px 4px 5px -1px rgba(0,0,0,0.5);
   padding: 1em;
   margin: 1em;
   // border-radius: 10px;
-  border: 2px solid black;
+  border: 1px solid rgba(0, 0, 0, 0.25);
   text-align: center;
   display: flex;
   flex-direction: row;
@@ -118,7 +132,7 @@ $cardShadow:3px 4px 5px -1px rgba(0,0,0,0.5);
   width: 100%;
   height: 100%;
   border-radius: 20px;
-  box-shadow: 3px 3px 5px -1px rgba(0, 0, 0, 0.6);
+  box-shadow: 3px 3px 2px -1px rgba(0, 0, 0, 0.6);
   left: 0;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
@@ -180,41 +194,45 @@ max-width: 300px;
 .flash-text {
   font-size: 40px;
   font-weight: 600;
-  font-family: sans-serif;
+  font-family: $numbersFont;
 }
 .flash-question-box {
   position:relative;
-  background-color: lightblue;
+  background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 19%, hsla(204, 49%, 70%, 1) 53%, hsla(202, 56%, 74%, 1) 81%, hsla(176, 58%, 72%, 1) 100%);
   z-index: 2;
   /* for firefox 31 */
   -webkit-transform: rotateY(0deg);
   -ms-transform: rotateY(0deg);
   &::after{
-    position:absolute;
-    content:"Question";
-    top:20px;
-    left:20px;
-    font-style:italic;
-    color:rgba(0,0,0,0.5);
-    z-index:10;
+    position: absolute;
+    font-family: 'Patua One';
+    content: "Question";
+    top: 20px;
+    left: 20px;
+    font-style: italic;
+    color: rgba(0, 0, 0, 0.7);
+    z-index: 10;
+    font-size: 20px;
     
   }
 }
 .flash-answer-box {
-  background-color: pink;
+  background:  -webkit-linear-gradient(45deg, hsla(306, 38%, 73%, 1) 39%, hsla(204, 49%, 70%, 1) 73%, hsla(202, 56%, 74%, 1) 91%, hsla(176, 58%, 72%, 1) 100%);
   -webkit-transform: rotateY(-180deg);
   -moz-transform: rotateY(-180deg);
   -o-transform: rotateY(-180deg);
   -ms-transform: rotateY(-180deg);
   transform: rotateY(-180deg); 
   &::after{
-    position:absolute;
-    content:"Answer";
-    top:20px;
-    left:20px;
-    font-style:italic;
-    color:rgba(0,0,0,0.5);
-    z-index:10;
+    position: absolute;
+    font-family: 'Patua One';
+    content: "Answer";
+    top: 20px;
+    left: 20px;
+    font-style: italic;
+    color: rgba(0, 0, 0, 0.7);
+    z-index: 10;
+    font-size: 20px;
   }
 }
 .flip {
@@ -295,6 +313,7 @@ max-width: 300px;
 // }
 
 body {
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -491,13 +510,13 @@ background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204
 
 .answer-submit
 {
-  margin-left:20px;
+  margin:20px;
   cursor:pointer;
   display: block;
   padding: 1em;
   border-radius: 10px;
   text-rendering: optimizeLegibility;
-  font-family: "roboto", sans-serif;
+  font-family: "Patua One", sans-serif;
   font-weight: 400;
   font-size:18px;
   background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204, 49%, 70%, 1) 63%, hsla(202, 56%, 74%, 1) 81%, hsla(176, 58%, 72%, 1) 100%);
@@ -587,39 +606,40 @@ background: -moz-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204, 4
 
 background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204, 49%, 70%, 1) 63%, hsla(202, 56%, 74%, 1) 81%, hsla(176, 58%, 72%, 1) 100%);
 // background: rgb(253, 160, 0);
-border-radius:20px;
+border-radius:15px;
 // backdrop-filter:brightness(1.5);
   max-width:100%;
-  padding: 1em;
+  padding: 2em;
   // margin: 1em;
   // border-radius: 10px;
-  border: 1px solid rgb(128, 128, 128);
+  // border: 1px solid rgb(128, 128, 128);
   text-align: center;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  box-shadow:3px 3px 5px -2px rgba(0,0,0,0.5);
+  box-shadow:$cardShadow
 }
 
 .question-text {
-  font-size: 1.25em;
+  font-size: 1.8em;
 }
 .question-number {
-  font-size: 2.5em;
-  padding: 0.8rem;
+  font-size: 2.8em;
+  padding: 1rem;
 }
 
 .operator {
   transform: translate(0px, 0px);
-  padding: 10px;
+  font-size: 2.8em;
+  padding: 5px;
 }
 .input {
-  cursor: target;
+ 
   margin-left: 10px;
   width: 20px;
-  height: 2.5ch;
-  font-size: 2.5rem;
+  height: 2.9ch;
+  font-size: 2.8rem;
   text-align: center;
   padding: 0;
   min-width: 4.5ch;
@@ -628,6 +648,7 @@ border-radius:20px;
 }
 .question-box {
   // padding: 2em;
+  
   text-align: center;
   display: flex;
   flex-direction: row;
@@ -669,7 +690,7 @@ border-radius:20px;
 }
 .curr-score-container,
 .high-score-container {
-  width: 30%;
+  width: 160px;
   min-width: 150px;
   flex-direction: row;
   display: flex;
@@ -765,7 +786,7 @@ border-radius:20px;
 background: -webkit-linear-gradient(175deg, hsla(306, 38%, 73%, 1) 29%, hsla(204, 49%, 70%, 1) 63%, hsla(202, 56%, 74%, 1) 81%, hsla(176, 58%, 72%, 1) 100%);
 
   position: absolute;
-  top: 5vh;
+  top: 8vh;
   right: 5vw;
   transition: all 200ms ease;
   &:hover {
@@ -905,7 +926,8 @@ background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204
 
 .option {
   // display:flex;
-  background-color:#eef2f3;
+  
+  background-color:#ffffff;
   // text-align: center;
   padding: 20px 40px;
   margin: 20px;
@@ -1022,14 +1044,15 @@ $button-color:rgba(240,240,240,1);
 }
 .display-container{
   background:$main-color;
-  max-width:95vw;
+  max-width:96vw;
   width:100vw;
   height:100vh;
-  max-height:95vh;
+  max-height:98vh;
+  // margin-top:4vh;
   flex-direction:column;
   align-items:center;
-  justify-content:space-evenly;
-  border-radius:20px;
+  justify-content:center;
+  // border-radius:20px;
 /*   box-shadow: 0px 5px 28px -5px rgba(0,0,0,0.25),0px 2px 9px 1px rgba(0,0,0,0.25); */
   box-shadow: 0 2px 8px 1px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
@@ -1043,6 +1066,7 @@ $button-color:rgba(240,240,240,1);
   align-items:center;
   justify-content:space-around;
   background-color:$main-color;
+  flex-direction: column;
 }
 .icon-container{
 /*    box-shadow: 0px 2px 10px -8px rgba(0,0,0,0.25),0px 1px 5px 1px rgba(0,0,0,0.3); */
@@ -1051,13 +1075,14 @@ $button-color:rgba(240,240,240,1);
   transition: all 0.6s cubic-bezier(.25,.8,.25,1);
     border:2px solid rgba(100,100,100,0);
   border-radius:100%;
-  width:125px;
-  height:125px;
+  width: 100px;
+  height:100px;
   display:flex;
   align-items:center;
   justify-content:center;
   flex-direction:column;
   padding:10px;
+  // margin-bottom:10px;
   &:hover{
     cursor:pointer;
   transition: all 0.6s cubic-bezier(.25,.8,.25,1);
@@ -1073,6 +1098,16 @@ $button-color:rgba(240,240,240,1);
   //   border-radius:5px;
   // }
   
+}
+.operator-text{
+  font-family: 'Patua One';
+  font-size: $mobileIconTextSize;
+  padding-top: 10px;
+  margin-bottom:10px;
+ &.addition{
+  // color:green;
+ }
+
 }
 .quiz{
    &:hover{
@@ -1165,24 +1200,28 @@ $button-color:rgba(240,240,240,1);
   display:flex;
   flex-direction:row;
   flex-wrap:wrap;
-  height:75%;
+  // height:75%;
   align-items:center;
   justify-content:center;
   
 }
 .bottom{
   display:flex;
-  align-items:top;
-  justify-content:space-evenly;
-    height:20%;
-  width:80%;
+  align-items:center;
+  justify-content:space-around;
+    // height:20%;
+  // width:80%;
+  padding-top:40px;
 }
 .nav-button{
+  outline:none;
+  border:0px solid rgba(157, 157, 157, 0);
+  // font-size:1.5em;
   background-color:$button-color;
   width:100px;
   height:50px;
     transition: all 0.25s cubic-bezier(.25,.8,.25,1);
-  border-radius:25px;
+  border-radius:30px;
   font-family:"Patua One";
   display:flex;
   align-items:center;
@@ -1190,14 +1229,18 @@ $button-color:rgba(240,240,240,1);
   text-align:center;
   padding:5px;
   // background-color:rgba(245,245,245,1);
-  font-size:1.25em;
+  font-size:2.5em;
+  color:#97b7d7 ;
   &:hover{
     transform:scale(1.00);
-      background-color:rgba(245,245,25,1);
-    cursor:pointer;
-    border:2px solid black;
-  border-radius:5px;
+    background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204, 49%, 70%, 1) 63%, hsla(202, 56%, 74%, 1) 81%, hsla(176, 58%, 72%, 1) 100%);
     
+    cursor:pointer;
+    border:0px solid rgba(157, 157, 157,1);
+  border-radius:20px;
+    > *{
+      color:rgb(250, 250, 242);
+    }
   }
 //   & .back-arrow{
 //     color:grey;
@@ -1209,13 +1252,7 @@ $button-color:rgba(240,240,240,1);
   align-items:end;
   justify-content:center;
 }
-.header{
- 
-  font-family:"Patua One";
-  font-size:2em;
-  text-align:center;
-  
-}
+
 
 .icon{
   font-size:3em;
@@ -1232,11 +1269,6 @@ $button-color:rgba(240,240,240,1);
 .game-icon{
   color:green;
 }
-.icon-container{
-
-
-}
-
 
 
 
@@ -1341,8 +1373,10 @@ $button-color:rgba(240,240,240,1);
 .divide-icon{
   color:purple;
 }
+
 .operator-choice > *{
   pointer-events:none;
+
 }
 .activities-choice >*{
   pointer-events:none;
@@ -1357,9 +1391,9 @@ $button-color:rgba(240,240,240,1);
   --thumb-color:green;
   -webkit-appearance: none;
   width: 30vw;
-  min-width:200px;
-  height: 10px;
-  margin: 20px;
+  min-width:280px;
+  height: 18px;
+  margin: 30px;
   padding: 0;
   background-color: lightgray;
   outline: none;
@@ -1371,8 +1405,8 @@ $button-color:rgba(240,240,240,1);
 #range-input::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   background-color: var(--thumb-color);
   border: 1px solid black;
   border-radius: 50%;
@@ -1466,11 +1500,171 @@ $button-color:rgba(240,240,240,1);
 }
 .icon-text{
   font-family: 'Patua One';
-  font-size: 1.2em;
+  font-size: $mobileIconTextSize;
   padding-top: 10px;
+  margin-bottom:10px;
 }
 .difficulty-text{
   font-family:'Patua One';
-  font-size:1.4em;
+  font-size:$mobileHeaderTextSize;
   padding:5px;
 }
+.header{
+  // margin-bottom:25px;
+}
+
+.header, .activity-title, .activity-type{
+ 
+  font-family:"Patua One";
+  font-size:$mobileHeaderTextSize;
+  text-align:center;
+  height:80px;
+  width:240px;
+}
+.hide-from-view{
+  visibility: hidden;
+}
+
+// Mobile Landscape
+@media only screen and (max-width:1000px) and (orientation:landscape) {
+  .header{
+    width:200px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding-right:25px;
+  }
+.display-container{
+  flex-direction: row;
+}
+.bottom{
+  position: absolute;
+  width:94vw;
+  justify-content: space-between;
+  // bottom:calc( 50% - 50px );
+}
+.nav-button{
+  width:75px;
+}
+.middle{
+  justify-content: flex-start;
+  flex-basis:326px;
+}
+.middle-inner{
+  justify-content: flex-start;
+  width:326px;
+}
+.top{
+  justify-content: flex-end;
+  padding-left:10px;
+  flex-basis:200px;
+}
+
+}
+
+// Tablet - Portrait
+@media only screen and (min-width:720px) and(max-aspect-ratio:2) and (orientation:landscape) {
+  .display-container{
+    max-width:92vw;
+    max-height:92vh;
+  flex-direction: row;
+
+  }
+.header{
+  font-size:32px;
+  // padding-bottom:30px;
+}
+.icon-container{
+  width:130px;
+  height:130px;
+}
+.icon-text{
+  font-size:30px;
+}
+.bottom{
+  position: absolute;
+
+  justify-content: space-evenly;
+  width:90vw;
+}
+.nav-button{
+  font-size:2.75px;
+  width:125px;
+  height:75px;
+  
+}
+.icon{
+  font-size:3.75em;
+}
+.middle{
+  justify-content: flex-start;
+  flex-basis:400px;
+}
+.middle-inner{
+  justify-content: flex-start;
+width:500px;
+}
+.top{
+  justify-content: flex-end;
+  padding-right:30px;
+  flex-basis:300px;
+}
+
+}
+  // /* 
+  // Tablet - Landscape
+@media only screen and (min-width:720px) and(max-aspect-ratio:2)  {
+  /* CSS code for tablet devices */
+  .display-container{
+    max-width:92vw;
+    max-height:92vh;
+  }
+  .header{
+    font-size:32px;
+    // padding-bottom:30px;
+    margin-bottom:50px;
+  }
+  .icon-container{
+    width:130px;
+    height:130px;
+  }
+  .icon-text{
+    font-size:24px;
+  }
+  .bottom{
+    justify-content: space-between;
+    width:90vw;
+  }
+  .nav-button{
+    font-size:2.75em;
+    width:125px;
+    height:75px;
+    
+  }
+  .icon{
+    font-size:3.75em;
+  }
+  .inner{
+    width:calc(50% - 100px)
+  }
+  
+}
+
+// Other
+// @media only screen and (min-width: 1025px) and (orientation:landscape){
+//   /* CSS code for desktop devices */
+
+//  .bottom{
+//   justify-content: space-between;
+//  }
+
+// }
+// @media only screen and (min-width: 1025px) {
+//   /* CSS code for desktop devices */
+
+//  .bottom{
+//   justify-content: space-evenly;
+//  }
+
+// }
+// 767
