--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1734,7 +1734,7 @@ $button-color:rgba(240,240,240,1);
   width:90vw;
 }
 .nav-button{
-  font-size:2.75px;
+  font-size:2.75em;
   width:125px;
   height:75px;
   
