Quiz Style Working

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -61,7 +61,52 @@ $numbersFont:"Roboto";
 html {
   -ms-touch-action: manipulation;
       touch-action: manipulation;
+      width:100vw;
+      height:100vh;
+      overflow: hidden;
 }
+
+body {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f0f0f0;
+  font-family:'Pangolin',cursive;
+  // background-image:url("https://images.unsplash.com/photo-1585119192382-71236d43b689?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80");
+  // background-image:url("https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80");
+  // background-image:url("https://images.unsplash.com/photo-1515787366009-7cbdd2dc587b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  // background-image:url("https://images.unsplash.com/photo-1518655048521-f130df041f66?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  // background-image:url("https://images.unsplash.com/photo-1493723843671-1d655e66ac1c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  //
+  // background-image:url("https://images.unsplash.com/photo-1440780336166-b19530cff5ec?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1477&q=80");
+  // background-image:url("https://images.unsplash.com/photo-1515871204537-49a5fe66a31f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1382&q=80");
+  // background-image:url("https:images.unsplash.com/photo-1497864149936-d3163f0c0f4b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80");
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
+  // background-size: cover;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204, 49%, 70%, 1) 63%, hsla(202, 56%, 74%, 1) 81%, hsla(176, 58%, 72%, 1) 100%);
+  
+  // &:after {
+  //   width: 100%;
+  //   height: 100%;
+  //   content: "";
+  //   // background-image: url("https://images.unsplash.com/photo-1440780336166-b19530cff5ec?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1477&q=80");
+  //   background-image: url("https://images.unsplash.com/photo-1419242902214-272b3f66ee7a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2113&q=80");
+
+  //   background-repeat: no-repeat;
+  //   background-position: center;
+
+  //   top: 0;
+  //   left: 0;
+  //   position: absolute;
+  //   z-index: -1;
+  // }
+}
+
 .brand-title{
   display:flex;
   font-family:Pangolin;
@@ -84,6 +129,8 @@ html {
   min-width: 100%;
   max-width: 100vw;
   height:100vh;
+  min-height: -webkit-fill-available;
+
   position: relative;
   // padding: 2em 2em;
 }
@@ -163,6 +210,8 @@ html {
   display: none;
 }
 .flash-card-container {
+  pointer-events:none;
+
   width:80%;
   display: none;
   align-items: center;
@@ -184,6 +233,7 @@ html {
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
 
+  -webkit-transform: perspective(1000px);
   -webkit-transition: 0.3s;
   -webkit-transform-style: preserve-3d;
   -ms-transition: 0.3s;
@@ -334,46 +384,7 @@ html {
 //   }
 // }
 
-body {
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #f0f0f0;
-  font-family:'Pangolin',cursive;
-  // background-image:url("https://images.unsplash.com/photo-1585119192382-71236d43b689?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80");
-  // background-image:url("https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80");
-  // background-image:url("https://images.unsplash.com/photo-1515787366009-7cbdd2dc587b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
-  // background-image:url("https://images.unsplash.com/photo-1518655048521-f130df041f66?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
-  // background-image:url("https://images.unsplash.com/photo-1493723843671-1d655e66ac1c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
-  //
-  // background-image:url("https://images.unsplash.com/photo-1440780336166-b19530cff5ec?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1477&q=80");
-  // background-image:url("https://images.unsplash.com/photo-1515871204537-49a5fe66a31f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1382&q=80");
-  // background-image:url("https:images.unsplash.com/photo-1497864149936-d3163f0c0f4b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80");
-  position: relative;
-  background-repeat: no-repeat;
-  background-position: center;
-  // background-size: cover;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204, 49%, 70%, 1) 63%, hsla(202, 56%, 74%, 1) 81%, hsla(176, 58%, 72%, 1) 100%);
-  
-  // &:after {
-  //   width: 100%;
-  //   height: 100%;
-  //   content: "";
-  //   // background-image: url("https://images.unsplash.com/photo-1440780336166-b19530cff5ec?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1477&q=80");
-  //   background-image: url("https://images.unsplash.com/photo-1419242902214-272b3f66ee7a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2113&q=80");
 
-  //   background-repeat: no-repeat;
-  //   background-position: center;
-
-  //   top: 0;
-  //   left: 0;
-  //   position: absolute;
-  //   z-index: -1;
-  // }
-}
 
 
 .sub-container {
@@ -533,18 +544,18 @@ background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204
 
 .answer-submit
 {
-  margin:20px;
+  margin:12px;
   cursor:pointer;
   display: block;
-  padding: 1em;
-  border-radius: 10px;
+  padding: 0.8em;
+  border-radius: 8px;
   text-rendering: optimizeLegibility;
   font-family: "Pangolin",cursive;
   font-weight: 400;
-  font-size:18px;
+  font-size:16px;
   background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204, 49%, 70%, 1) 63%, hsla(202, 56%, 74%, 1) 81%, hsla(176, 58%, 72%, 1) 100%);
   color: #000000;
-  box-shadow: 3px 3px 1px black;
+  box-shadow: 2px 2px 1px black;
   transform: translate(0px, 0px);
   transition: 100ms transform ease, 50ms box-shadow ease;
   width: 100px;
@@ -554,7 +565,7 @@ background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204
   // // }
   &:active {
     box-shadow: 0px 0px 1px black;
-    transform: translate(3px, 3px);
+    transform: translate(2px, 2px);
   }
 }
 .choose-option{
@@ -604,20 +615,22 @@ background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204
     visibility: hidden;
     transition: all 500ms ease;
     font-weight: 800;
-    font-size:1.4em;
+    font-size:1em;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 10px;
-    margin: 5px;
+    padding: 3px;
+    margin: 2px;
 
     & > * {
-      padding: 5px;
-      margin: 5px;
+      padding: 2px;
+      margin: 2px;
       color: black;
     }
+
   }
+
 }
 
 .question {
@@ -653,28 +666,28 @@ font-family:'Pangolin', cursive;
   border-radius:8px;
   box-shadow:$cardShadow;
 }
-.question-text {
-  font-size: 1.8em;
-}
+
 .question-number {
   font-size: 2.8em;
   padding: 1rem;
 }
-
+.question-text {
+  font-size: 2.2em;
+}
 .operator {
   transform: translate(0px, 0px);
-  font-size: 2.8em;
-  padding: 5px;
+  font-size: 2.2em;
+  padding: 4px;
 }
 .input {
   font-family:'Pangolin', cursive;
   margin-left: 10px;
   width: 20px;
   height: 2.9ch;
-  font-size: 2.8rem;
+  font-size: 2.2em;
   text-align: center;
   padding: 0;
-  min-width: 4.5ch;
+  min-width: 4ch;
   border-radius: 20px;
   color:$chalk-white;
   background: $chalkboard-green;
@@ -704,16 +717,16 @@ font-family:'Pangolin', cursive;
 }
 
 .correctness {
-  padding: 1em;
-  margin: 0.5em 0;
+  padding: 0.5em;
+  margin: 0.2em 0;
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1.2em;
   width: 100%;
-  max-width: 300px;
+  max-width: 200px;
   display: flex;
   // align-items:center;
   justify-content: center;
-  border-radius:10px;
+  border-radius:8px;
   // color:$lightText;
 }
 .score-container {
@@ -1575,7 +1588,67 @@ $button-color:rgba(240,240,240,1);
 .hide-from-view{
   visibility: hidden;
 }
+.quiz-question{
+  border:7px solid $wood;
+  border-radius:10px;
+ max-width:94vw;
+ padding:1.2em;
+}
+.quiz-input{
+  &::placeholder{
+    color:$chalk-white;
+  }
+}
+.quiz-container{
+  justify-content: flex-start;
+  padding-top:30%;
+}
+.quiz-icon{
+  font-size:2em;
+  color:blue;
+}
+.quiz-activity-title{
 
+}
+.mc-container{
+  justify-content: flex-end;
+  padding-bottom:25px;
+}
+.quiz-correctness-scores{
+  padding: 0 20px;
+}
+.game-question{
+  border:10px solid $wood;
+  border-radius:15px;
+}
+.progress-container{
+  width:100%;
+  margin:0em;
+  padding-bottom:0;}
+.curr-score-container, .high-score-container,.game-correctness .correctness{
+  margin:0.2em;
+  padding:0;
+  
+}
+.correctness{
+  padding:0.2em;
+}
+.game-question{
+  padding:1.5em;
+}
+.game-titles-group{
+  margin-bottom:0;
+}
+.actual-container{
+  padding:0;
+}
+.correctness-container{
+  display: flex;
+  flex-direction:row;
+}
+.game-correctness{
+  max-width:100px;
+}
 // Mobile Landscape
 @media only screen and (max-width:1000px) and (orientation:landscape) {
   .header{
@@ -1592,6 +1665,7 @@ $button-color:rgba(240,240,240,1);
   position: absolute;
   width:94vw;
   justify-content: space-between;
+  top: 58vh;
   // bottom:calc( 50% - 50px );
 }
 .nav-button{
@@ -1639,6 +1713,35 @@ $button-color:rgba(240,240,240,1);
 .titles-group{
   width:auto;
   margin-right:5vw;
+}
+.flash-container{
+  
+padding-top:50px;
+
+}
+.quiz-container{
+  flex-direction:column;
+  padding-top:0%;
+  justify-content: center;
+}
+.quiz-middle-lower{
+  display: flex;
+  flex-direction: row-reverse;
+}
+.game-container{
+  flex-direction:column;
+}
+.game-middle-inner{
+  display:flex;
+  flex-direction: row;
+}
+.game-middle-lower{
+  display:flex;
+  flex-direction: row-reverse;
+}
+.game-lower{
+  display: flex;
+  flex-direction: column;
 }
 }
 
@@ -1706,6 +1809,15 @@ $button-color:rgba(240,240,240,1);
   }
 .flash-middle{
   margin:0 100px;
+}
+.quiz-correctness-scores{
+  margin:  20px 0;
+  >*{
+    font-size:1.6em;
+  }
+}
+.quiz-question{
+  height:250px;
 }
 }
 @media only screen and (min-width:720px) and (max-aspect-ratio:2) and (orientation:landscape) {
@@ -1786,6 +1898,16 @@ width:500px;
 .flash-upper{
   max-width:400px;
 }
+.quiz-container{
+  flex-direction:column;
+  padding-top:0%;
+  justify-content: center;
+}
+.quiz-middle-lower{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 }
 // Other
 // @media only screen and (min-width: 1025px) and (orientation:landscape){
