--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -816,7 +816,7 @@ font-family:'Pangolin', cursive;
 }
 .actual-container {
   display: flex;
-  // visibility: hidden;
+  visibility: hidden;
   flex-direction: row;
   padding: 0.5em;
   text-align: left;
