--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -64,6 +64,7 @@ html {
       touch-action: manipulation;
       width:100%;
       height:100%;
+      min-height: -webkit-fill-available;
       overflow: hidden;
 }
 
@@ -105,9 +106,9 @@ background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204
   justify-content: center;
   flex-direction: column;
   min-width: 100%;
-  max-width: 100vw;
-  height:100vh;
-  min-height: -webkit-fill-available;
+  max-width: 100%;
+  // height:100vh;
+  // min-height: -webkit-fill-available;
   position: relative;
 }
  .middle, .bottom{
@@ -433,8 +434,8 @@ background:$chalkboard-green;
 color:#eae6df;
 font-family:'Pangolin', cursive;
   max-width:100%;
-  padding: 2em;
-
+  
+  font-size:2em;
   text-align: center;
   display: flex;
   flex-direction: row;
@@ -450,23 +451,23 @@ font-family:'Pangolin', cursive;
 }
 
 .question-number {
-  font-size: 2.8em;
+  // font-size: 2.8em;
   padding: 1rem;
 }
 .question-text {
-  font-size: 2.2em;
+  // font-size: 2.4em;
 }
 .operator {
   transform: translate(0px, 0px);
-  font-size: 2.2em;
+  // font-size: 2.4em;
   padding: 4px;
 }
 .input {
   font-family:'Pangolin', cursive;
   margin-left: 10px;
-  width: 20px;
-  height: 2.9ch;
-  font-size: 2.2em;
+  width: 5ch;
+  height: 3.6ch;
+  font-size: 1em;
   text-align: center;
   padding: 0;
   min-width: 4ch;
@@ -809,7 +810,7 @@ background:rgba(255, 255, 255, 0.25);
   max-width:100%;
   max-height:100%;
   min-height:calc(-webkit-fill-available - 4vh);
-  flex-direction:row;
+  // flex-direction:row;
   align-items:center;
   justify-content:center;
   border:12px solid $wood;
@@ -1203,7 +1204,7 @@ background:rgba(255, 255, 255, 0.25);
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-bottom:5vh;
+  // margin-bottom:5vh;
 
 }
 .activity-title, .activity-type{
@@ -1255,7 +1256,7 @@ background:rgba(255, 255, 255, 0.25);
 .quiz-question{
   border-radius:10px;
  max-width:94vw;
- padding:1.2em;
+ padding:2em;
 }
 .quiz-input{
   &::placeholder{
@@ -1263,7 +1264,7 @@ background:rgba(255, 255, 255, 0.25);
   }
 }
 .quiz-container{
-  padding-top:10%;
+  padding-top:15%;
 }
 .quiz-icon{
   font-size:2em;
@@ -1319,6 +1320,19 @@ background:rgba(255, 255, 255, 0.25);
   flex-direction:column;
   padding-top:25px;
 }
+.nav-left-upper{
+  display:none;
+}
+.activity-menu-container, .operator-menu-container, .difficulty-menu-container{
+  flex-direction:column;
+}
+.nav-buttons{
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 // Mobile Landscape (max-width:1000px)
 @media only screen and  (orientation:landscape) and (min-aspect-ratio:2) {
   .header{
@@ -1328,7 +1342,7 @@ background:rgba(255, 255, 255, 0.25);
     display: flex;
     padding-right:25px;
   }
-.display-container{
+.activity-menu-container, .operator-menu-container, .difficulty-menu-container{
   flex-direction: row;
 }
 .bottom{
@@ -1349,14 +1363,12 @@ background:rgba(255, 255, 255, 0.25);
   justify-content: center;
   width:260px;
 }
-.top{
-  justify-content: flex-end;
-  padding-left:20px;
-  flex-basis:200px;
-}
-.mc-container{
-  flex-direction:column;
-}
+// .top{
+//   justify-content: flex-end;
+//   padding-left:20px;
+//   flex-basis:200px;
+// }
+
 .mc-middle-lower{
   display:flex;
   flex-direction: row;
@@ -1387,6 +1399,12 @@ background:rgba(255, 255, 255, 0.25);
 padding-top:50px;
 
 }
+.quiz-container{
+  padding-top:5%;
+}
+.titles-group{
+  margin-bottom:5vh;
+}
 .quiz-container:has(.display-container){
   flex-direction:column;
   padding-top:0%;
@@ -1394,7 +1412,7 @@ padding-top:50px;
 }
 .quiz-middle-lower{
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
 }
 .game-container{
   flex-direction:column;
@@ -1405,7 +1423,7 @@ padding-top:50px;
 }
 .game-middle-lower{
   display:flex;
-  flex-direction: row-reverse;
+  flex-direction: row-row;
 }
 .game-lower{
   display: flex;
@@ -1432,6 +1450,25 @@ padding-top:50px;
  
   width:max-content;
 }
+.nav-left-lower{
+  display:none;
+}
+.nav-left-upper{
+  display:inherit;
+}
+.operator-group, .activity-group{
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+}
+.game-container{
+  // display: flex;
+  flex-direction: column;
+}
+.game-middle-lower{
+  flex-direction: row;
+  display: flex;
+}
 }
 
 // Tablet - Portrait
@@ -1439,10 +1476,9 @@ padding-top:50px;
   // /* 
 
 
-@media only screen and (min-width:720px)  and(max-aspect-ratio:2)  {
+@media only screen  and (max-aspect-ratio:2) and (orientation:portrait)   {
   /* CSS code for tablet devices */
-  .display-container{
-  }
+
   .header{
     font-size:30px;;
     margin-bottom:50px;
@@ -1463,28 +1499,35 @@ padding-top:50px;
   }
   .nav-button{
     font-size:2.75em;
-    width:125px;
+    width:100px;
     height:75px;
     
   }
   .icon{
     font-size:3.75em;
   }
-
+  .game-top,.flash-upper{
+    margin-bottom:5vh;
+  }
   .flash-text{
-    font-size:3.25em;
+    font-size:2.75em;
   }
   .flash-answer-box,.flash-question-box{
-    max-width:400px;
-    height:300px;
+    max-width:300px;
+    max-height:250px;
     font-size:1.4em;
   }
   .question{
-    min-width:400px;
-    height:300px;
+    min-width:250px;
+    height: 120px;
   font-size:1.8em;
   }
-
+  .mc-top{
+    padding-bottom:25px;
+  }
+  .mc-question{
+    font-size:2.8em;
+  }
   .option{
     max-width:130px;
     height:95px;
@@ -1501,7 +1544,12 @@ padding-top:50px;
   }
 }
 .quiz-question{
-  height:250px;
+  height:150px;
+  padding:2em;
+
+}
+.titles-group{
+  margin-bottom:inherit;
 }
 .progress-container{
   width:100%;
@@ -1509,10 +1557,18 @@ padding-top:50px;
 }
 
 }
-@media only screen and (min-width:720px) and (max-aspect-ratio:2) and (orientation:landscape) {
-  .display-container{
-  flex-direction: row;
+//  (min-width:720px)
+@media only screen  and (max-aspect-ratio:2) and (orientation:landscape) {
+  // .display-container{
+  // flex-direction: row;
 
+  // }
+  .activity-menu-container, .operator-menu-container, .difficulty-menu-container, .game-middle-lower{
+    // display: flex;
+    flex-direction: row;
+  }
+  .game-container{
+    flex-direction: column;
   }
 .header{
   font-size:32px;
@@ -1535,7 +1591,7 @@ padding-top:50px;
 }
 .nav-button{
   font-size:2.75em;
-  width:125px;
+  width:100px;
   height:75px;
   
 }
@@ -1551,18 +1607,17 @@ padding-top:50px;
 width:360px;
 }
 .top{
-  padding-right:30px;
-  flex-basis:300px;
+  // padding-right:30px;
+  flex-basis:150px;
 }
 .flash-text{
   font-size:2.75em;
 }
-.flash-container{
-  max-width:300px;
-  max-height:250px;
-}
+
 .flash-answer-box,.flash-question-box{
   font-size:1.2em;
+  max-width:300px;
+  max-height:250px;
 }
 .mc-top{
   flex-basis:40%;
@@ -1570,14 +1625,25 @@ width:360px;
 .mc-middle-lower{
   flex-basis:60%;
 }
+.mc-container{
+  flex-direction:row;
+}
+.options{
+  margin-top:0;
+}
 .question{
   min-width:250px;
 height: 180px;
-  font-size:1.5em;
+  font-size:2.8em;
 }
 .mc-question{
   height:100px;
   padding:0;
+  min-width:inherit;
+
+}
+.mc-question-box{
+  justify-content: flex-start;
 }
 .option{
   max-width:150px;
@@ -1590,9 +1656,10 @@ height: 180px;
 .flash-upper{
   max-width:400px;
 }
+
 .quiz-container{
   flex-direction:column;
-  padding-top:0%;
+  padding-top:5%;
   justify-content: center;
 }
 .quiz-middle-lower{
@@ -1616,6 +1683,25 @@ height: 180px;
 .option{
   width:120px;
   height:80px;
+}
+.nav-left-lower{
+  display:none;
+}
+.nav-left-upper{
+  display:inherit;
+}
+.operator-group, .activity-group{
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+}
+.game-middle-lower{
+  display: flex;
+  flex-direction: row;
+}
+.game-question{
+  padding:0;
+  font-size:2em;
 }
 }
 
