--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -427,7 +427,7 @@ background: -webkit-linear-gradient(225deg, hsla(306, 38%, 73%, 1) 29%, hsla(204
 
 .question {
 
-background:$chalkboard-green;
+background:transparent;
 color:#eae6df;
 font-family:'Pangolin', cursive;
   max-width:100%;
@@ -837,8 +837,8 @@ background:rgba(255, 255, 255, 0.25);
   transition: all 0.6s cubic-bezier(.25,.8,.25,1);
     border:2px solid rgba(100,100,100,0);
   border-radius:100%;
-  width: 100px;
-  height:100px;
+  width: 90px;
+  height:90px;
   display:flex;
   align-items:center;
   justify-content:center;
@@ -964,7 +964,7 @@ background:rgba(255, 255, 255, 0.25);
 .nav-button{
   outline:none;
   border:0px solid rgba(157, 157, 157, 0);
-  background-color:$chalkboard-green;
+  background-color:transparent;
   width:100px;
   height:50px;
     transition: all 0.25s cubic-bezier(.25,.8,.25,1);
@@ -1253,7 +1253,7 @@ background:rgba(255, 255, 255, 0.25);
 .quiz-question{
   border-radius:10px;
  max-width:94vw;
- padding:2em;
+ padding:0.8em;
 }
 .quiz-input{
   &::placeholder{
@@ -1261,7 +1261,7 @@ background:rgba(255, 255, 255, 0.25);
   }
 }
 .quiz-container{
-  padding-top:15%;
+  padding-top:22%;
 }
 .quiz-icon{
   font-size:2em;
@@ -1505,7 +1505,7 @@ padding-top:50px;
     
   }
   .icon{
-    font-size:3.75em;
+    font-size:2.75em;
   }
   .game-top,.flash-upper{
     margin-bottom:5vh;
