--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1568,7 +1568,7 @@ padding-top:50px;
   // flex-direction: row;
 
   // }
-  .activity-menu-container, .operator-menu-container, .difficulty-menu-container, .game-middle-lower{
+  .activity-menu-container, .operator-menu-container, .difficulty-menu-container, .game-middle-lower, .real-menu-container, .practice-menu-container{
     // display: flex;
     flex-direction: row;
   }
