--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1633,9 +1633,12 @@ padding-top:50px;
 .icon{
   font-size:3.75em;
 }
+.flash-upper{
+  margin-bottom:5vh;
+}
 .middle{
   justify-content: flex-start;
-  flex-basis:400px;
+  // flex-basis:400px;
 }
 .middle-inner{
   justify-content: center;
