log-in progress

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -790,11 +790,11 @@ background:rgba(255, 255, 255, 0.25);
 }
 
 
-.operator-menu-container,.difficulty-menu-container, .real-menu-container,.practice-menu-container, .activity-menu-container{
+.operator-menu-container,.difficulty-menu-container, .real-menu-container,.practice-menu-container{
   display:none;
 }
 
-.login-menu-container,.middle, .top,.bottom{
+.login-menu-container, .activity-menu-container,.middle, .top,.bottom{
   display:flex;
 
 
