--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1346,6 +1346,96 @@ background:rgba(255, 255, 255, 0.25);
 
 
 
+  /* Container */
+  .login-container {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 40px;
+    border-radius: 4px;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  /* Headings */
+  .login-header {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 32px;
+    font-weight: 500;
+    text-align: center;
+  }
+  
+  /* Form */
+  .login-form-group {
+    margin-bottom: 20px;
+  }
+  
+  .login-label {
+    display: block;
+    margin-bottom: 8px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #333;
+  }
+  
+  .login-input[type="text"],
+  .login-input[type="password"] {
+    width: 100%;
+    padding: 8px 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    line-height: 1.5;
+  }  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 // Mobile Landscape (max-width:1000px)
 @media only screen and  (orientation:landscape) and (min-aspect-ratio:1.75) {
   .header{
